[package]
name = 'dorr-pallet'
version = '0.0.1'
authors = ['bykeks0x@gmail.com']
edition = '2018'

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true }

# primitives
sp-api = { version = '2.0.0', default-features = false}
sp-std = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }
sp-io = { version = "2.0.0", default-features = false }
sp-core = { version = "2.0.0", default-features = false }
sp-arithmetic = { version = "2.0.0", default-features = false }

# frame dependencies
frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }

pallet-randomness-collective-flip = { version = '2.0.0', default-features = false }
schnorrkel = { version = '0.10.1', default-features = false, features = ["preaudit_deprecated", "u64_backend"] }
merlin = { version = '3.0.0', default-features = false }
rustc-hex = { version="2.1.0", default-features = false }

[dev-dependencies]
pallet-balances = { version = "2.0.0", default-features = false }

[build-dependencies]
wasm-builder-runner = { version = "2.0.0", package = "substrate-wasm-builder-runner" }
[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"sp-api/std",
	"sp-std/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-core/std",
	"sp-arithmetic/std",
	"frame-support/std",
	"frame-system/std",
	'schnorrkel/std',
	'merlin/std',
	'rustc-hex/std',
]
